# ds-demos-zk-product-passport

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: main.yml  python.yml  rust.yml
core/src/: lib.rs
frontend/: mining_licence_claims.json  product_passport_claims.json  prove.py  requirements.txt  sign_mining_licence.py  sign_product_passport.py  test.py  verify.py
host/: Cargo.toml  custom_claims.json  invoice_claims.json  mining_licence_claims.json  test_pk_3.json
host/src/: lib.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
test_data/: conflict_zones.json  licence_claims.json  national_mining_authority_pk.jwk  national_mining_authority_sk.jwk  product_passport_claims.json
