[project]
name = "frontend"
version = "0.1.0"
description = "Demo of zero-knowledge product passports"
authors = [
    {name = "opensource@digicatapult.org.uk"}
]
requires-python = ">=3.13"
dependencies = [
    "gooey (>=1.0.8.1,<2.0.0.0)",
    "six (>=1.17.0,<2.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry.scripts]
sign_mining_licence = "frontend.sign_mining_licence:main"
sign_product_passport = "frontend.sign_product_passport:main"
prove = "frontend.prove:main"
verify = "frontend.verify:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
